[BTWCT-1075] - prevented overlay flicker while scrolling between signin icon and dropdown

--- a/waters-aem-frontend/src/styles/header.scss
+++ b/waters-aem-frontend/src/styles/header.scss
@@ -41,13 +41,12 @@
     
         &__nav {
             margin-left: auto;
-            align-self: center;
     
             ul {
                 list-style: none;
                 padding: 0;
                 margin: 0;
-                height: 100%;;
+                height: 100%;
 
                 li {
                     height: 100%;
